@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2023  Hybird
+#    Copyright (C) 2009-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -382,7 +382,8 @@ def inner_edition_uri(instance, cells, callback_url=None):
         cells=[cells] if isinstance(cells, EntityCell) else cells,
     )
 
-    if callback_url:
+    # if callback_url:
+    if callback_url and uri:
         uri += f'&callback_url={callback_url}'
 
     return uri
